salesforce-classic-Feature-IN-955/src/objects/Schdeule_Charge__c.object
<CustomObject>
    <label>Schdeule Charge</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Schdeule Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schdeule Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Gotransverse Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>OneTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <label>OpportunityID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productEid__c</fullName>
        <label>Gotransverse ProductEid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>Gotransverse Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schdeule_Amount__c</fullName>
        <label>Gotransverse Schdeule Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schdeule_Date__c</fullName>
        <label>Gotransverse Schdeule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schdeule_Description__c</fullName>
        <label>Gotransverse Schdeule Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>